fixed overview area spacing

--- a/components/useCaseGenerics/overview.module.css
+++ b/components/useCaseGenerics/overview.module.css
@@ -9,7 +9,7 @@
     font-family: SF Pro Text, sans-serif;
     margin-top: 10rem;
     width: var(--widest-container-width);
-    gap: 4rem;
+    gap: 2rem 0px;
     justify-content: space-between;
 }
 
@@ -17,14 +17,15 @@
     display: flex;
     flex-direction: column;
     font-family: SF Pro Text, sans-serif;
-    width: 30%;
+    width: 32%;
+    gap: 1.5rem;
 }
 
 .row2{
     display: flex;
     flex-direction: column;
     font-family: SF Pro Text, sans-serif;
-    width: 60%;
+    width: 55%;
 }
 
 .heading{
@@ -48,14 +49,16 @@
     font-style: normal;
     font-weight: 400;
     line-height: 150%;
+}
 
+.marginTopNone {
+    margin-top: 0px;
 }
 
 @media (max-width: 1030px) {
     .outterContainer{
         margin-top: 6.5rem;
-        /* gap: 2rem 2rem; */
-        gap: 2rem;
+        gap: 1.5rem 2rem;
         
     }
     .row1{
@@ -69,7 +72,6 @@
 @media (max-width: 714px) {
     .outterContainer{
         margin-top: 4rem;
-        /* gap: 2rem 2rem; */
         flex-direction: column;
     }
 
